# German_speaking

./: README.md  pyproject.toml
ai_lab/: input.json  pipline.py  show_samples.py
ai_lab/tools/: analyse.py  predict_emotion.py  preprocess.py  topic_model.py  visualize.py
ai_lab/ui/: app.py
final_work/: 00_title.md  01_introduction.md  02_literature_review.md  03_methodology.md  04_implementation.md  05_results.md  06_conclusion.md  07_bibliography.md  ВКР.docx
